# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import applicationsRouter from "./applications";
+import settingsRouter from "./settings";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(applicationsRouter);
+router.use(settingsRouter);
+router.use(adminRouter);
 
 export default router;
